[project]
name = "wvu-ieng-331-m2-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luke Jackson", email = "lj00021@mix.wvu.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "basedpyright>=1.39.0",
    "duckdb>=1.5.2",
    "loguru>=0.7.3",
    "polars>=1.39.3",
]

[project.scripts]
wvu-ieng-331-m2-2 = "wvu_ieng_331_m2_2:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
